fmk - updating and adding routines for dgesvxx, a lapack solver that includes iterative refinement for use with porrly conditioned matrices

--- a/.gitattributes
+++ b/.gitattributes
@@ -807,13 +807,30 @@ OTHER/ITPACK/sor.f -text
 OTHER/ITPACK/ssorcg.f -text
 OTHER/ITPACK/ssorsi.f -text
 OTHER/ITPACK/user2c.tex -text
+OTHER/LAPACK/BLAS_dgemv2_d_s-f2c.c -text
+OTHER/LAPACK/BLAS_dgemv2_d_s.c -text
+OTHER/LAPACK/BLAS_dgemv2_x-f2c.c -text
+OTHER/LAPACK/BLAS_dgemv2_x.c -text
+OTHER/LAPACK/BLAS_dgemv_x-f2c.c -text
+OTHER/LAPACK/BLAS_dgemv_x.c -text
+OTHER/LAPACK/BLAS_error.c -text
 OTHER/LAPACK/Makefile -text
+OTHER/LAPACK/blas_dense_proto.h -text
+OTHER/LAPACK/blas_enum.h -text
+OTHER/LAPACK/blas_extended.h -text
+OTHER/LAPACK/blas_extended_private.h -text
+OTHER/LAPACK/blas_extended_proto.h -text
+OTHER/LAPACK/blas_fpu.h -text
+OTHER/LAPACK/blas_malloc.h -text
+OTHER/LAPACK/chla_transtype.f -text
 OTHER/LAPACK/dgbsv.f -text
 OTHER/LAPACK/dgbtf2.f -text
 OTHER/LAPACK/dgbtrf.f -text
 OTHER/LAPACK/dgbtrs.f -text
 OTHER/LAPACK/dgebak.f -text
 OTHER/LAPACK/dgebal.f -text
+OTHER/LAPACK/dgecon.f -text
+OTHER/LAPACK/dgeequb.f -text
 OTHER/LAPACK/dgeev.f -text
 OTHER/LAPACK/dgehd2.f -text
 OTHER/LAPACK/dgehrd.f -text
@@ -822,7 +839,12 @@ OTHER/LAPACK/dgelqf.f -text
 OTHER/LAPACK/dgels.f -text
 OTHER/LAPACK/dgeqr2.f -text
 OTHER/LAPACK/dgeqrf.f -text
+OTHER/LAPACK/dgerfsx.f -text
 OTHER/LAPACK/dgesv.f -text
+OTHER/LAPACK/dgesvd.f -text
+OTHER/LAPACK/dgesvj.f -text
+OTHER/LAPACK/dgesvx.f -text
+OTHER/LAPACK/dgesvxx.f -text
 OTHER/LAPACK/dgetf2.f -text
 OTHER/LAPACK/dgetrf.f -text
 OTHER/LAPACK/dgetri.f -text
@@ -835,7 +857,15 @@ OTHER/LAPACK/dgttrf.f -text
 OTHER/LAPACK/dgttrs.f -text
 OTHER/LAPACK/dhgeqz.f -text
 OTHER/LAPACK/dhseqr.f -text
+OTHER/LAPACK/dla_geamv.f -text
+OTHER/LAPACK/dla_gercond.f -text
+OTHER/LAPACK/dla_gerfsx_extended.f -text
+OTHER/LAPACK/dla_gerpvgrw.f -text
+OTHER/LAPACK/dla_lin_berr.f -text
+OTHER/LAPACK/dla_rpvgrw.f -text
+OTHER/LAPACK/dla_wwaddw.f -text
 OTHER/LAPACK/dlabad.f -text
+OTHER/LAPACK/dlacn2.f -text
 OTHER/LAPACK/dlacon.f -text
 OTHER/LAPACK/dlacpy.f -text
 OTHER/LAPACK/dladiv.f -text
@@ -859,6 +889,7 @@ OTHER/LAPACK/dlanv2.f -text
 OTHER/LAPACK/dlaptm.f -text
 OTHER/LAPACK/dlapy2.f -text
 OTHER/LAPACK/dlapy3.f -text
+OTHER/LAPACK/dlaqge.f -text
 OTHER/LAPACK/dlar2v.f -text
 OTHER/LAPACK/dlaran.f -text
 OTHER/LAPACK/dlarf.f -text
@@ -873,6 +904,7 @@ OTHER/LAPACK/dlartg.f -text
 OTHER/LAPACK/dlartv.f -text
 OTHER/LAPACK/dlaruv.f -text
 OTHER/LAPACK/dlascl.f -text
+OTHER/LAPACK/dlascl2.f -text
 OTHER/LAPACK/dlaset.f -text
 OTHER/LAPACK/dlasr.f -text
 OTHER/LAPACK/dlasrt.f -text
@@ -880,6 +912,7 @@ OTHER/LAPACK/dlassq.f -text
 OTHER/LAPACK/dlasv2.f -text
 OTHER/LAPACK/dlaswp.f -text
 OTHER/LAPACK/dlasy2.f -text
+OTHER/LAPACK/dlatrs.f -text
 OTHER/LAPACK/dorg2r.f -text
 OTHER/LAPACK/dorghr.f -text
 OTHER/LAPACK/dorgqr.f -text
@@ -896,6 +929,7 @@ OTHER/LAPACK/dpotrf.f -text
 OTHER/LAPACK/dpotrs.f -text
 OTHER/LAPACK/dpttrf.f -text
 OTHER/LAPACK/dpttrs.f -text
+OTHER/LAPACK/drscl.f -text
 OTHER/LAPACK/dsbevx.f -text
 OTHER/LAPACK/dsbtrd.f -text
 OTHER/LAPACK/dstebz.f -text
@@ -911,9 +945,12 @@ OTHER/LAPACK/dtrti2.f -text
 OTHER/LAPACK/dtrtri.f -text
 OTHER/LAPACK/dtrtrs.f -text
 OTHER/LAPACK/dzsum1.f -text
+OTHER/LAPACK/f2c-bridge.h -text
 OTHER/LAPACK/icmax1.f -text
 OTHER/LAPACK/ieeeck.f -text
 OTHER/LAPACK/ilaenv.f -text
+OTHER/LAPACK/ilaprec.f -text
+OTHER/LAPACK/ilatrans.f -text
 OTHER/LAPACK/izmax1.f -text
 OTHER/LAPACK/lsame.f -text
 OTHER/LAPACK/lsamen.f -text
