--- a/.gitattributes
+++ b/.gitattributes
@@ -35,6 +35,8 @@ DEVELOPER/core/Domain.h -text
 DEVELOPER/core/DomainComponent.cpp -text
 DEVELOPER/core/DomainComponent.h -text
 DEVELOPER/core/DomainDecompositionAnalysis.h -text
+DEVELOPER/core/DummyStream.cpp -text
+DEVELOPER/core/DummyStream.h -text
 DEVELOPER/core/Element.cpp -text
 DEVELOPER/core/Element.h -text
 DEVELOPER/core/ElementIter.h -text
