L. Xie and X. Lu - initial import CulaSolver

--- a/.gitattributes
+++ b/.gitattributes
@@ -4140,6 +4140,10 @@ SRC/system_of_eqn/linearSOE/profileSPD/SProfileSPDLinSOE.cpp -text
 SRC/system_of_eqn/linearSOE/profileSPD/SProfileSPDLinSOE.h -text
 SRC/system_of_eqn/linearSOE/profileSPD/SProfileSPDLinSolver.cpp -text
 SRC/system_of_eqn/linearSOE/profileSPD/SProfileSPDLinSolver.h -text
+SRC/system_of_eqn/linearSOE/sparseGEN/CulaSparseSolverS4.cpp -text
+SRC/system_of_eqn/linearSOE/sparseGEN/CulaSparseSolverS4.h -text
+SRC/system_of_eqn/linearSOE/sparseGEN/CulaSparseSolverS5.cpp -text
+SRC/system_of_eqn/linearSOE/sparseGEN/CulaSparseSolverS5.h -text
 SRC/system_of_eqn/linearSOE/sparseGEN/DistributedSparseGenColLinSOE.cpp -text
 SRC/system_of_eqn/linearSOE/sparseGEN/DistributedSparseGenColLinSOE.h -text
 SRC/system_of_eqn/linearSOE/sparseGEN/DistributedSparseGenRowLinSOE.cpp -text
