fmk - initial import

--- a/.gitattributes
+++ b/.gitattributes
@@ -578,6 +578,7 @@ MAKES/Makefile.def.EC2-SUSE -text
 MAKES/Makefile.def.EC2-UBUNTU -text
 MAKES/Makefile.def.EC2-WINDOWS-CYGWIN -text
 MAKES/Makefile.def.HANSEN -text
+MAKES/Makefile.def.KEENELAND -text
 MAKES/Makefile.def.KRAKEN -text
 MAKES/Makefile.def.LONESTAR -text
 MAKES/Makefile.def.MacOS10.4 -text
