fmk - initial import

--- a/.gitattributes
+++ b/.gitattributes
@@ -585,6 +585,7 @@ MAKES/Makefile.def.MacOS10.4 -text
 MAKES/Makefile.def.MacOS10.5 -text
 MAKES/Makefile.def.MacOS10.6 -text
 MAKES/Makefile.def.MacOS10.8 -text
+MAKES/Makefile.def.OPENMPI -text
 MAKES/Makefile.def.OSG -text
 MAKES/Makefile.def.RANGER -text
 MAKES/Makefile.def.SOLARIS -text
