Konstantinos Megalooikonomou - inital import FRPConfinedConcrete

--- a/.gitattributes
+++ b/.gitattributes
@@ -3149,6 +3149,8 @@ SRC/material/uniaxial/ElasticMultiLinear.h -text
 SRC/material/uniaxial/ElasticPPMaterial.cpp -text
 SRC/material/uniaxial/ElasticPPMaterial.h -text
 SRC/material/uniaxial/ElasticPPMaterial.tex -text
+SRC/material/uniaxial/FRPConfinedConcrete.cpp -text
+SRC/material/uniaxial/FRPConfinedConcrete.h -text
 SRC/material/uniaxial/FatigueMaterial.cpp -text
 SRC/material/uniaxial/FatigueMaterial.h -text
 SRC/material/uniaxial/FedeasMaterial.cpp -text
