fmk - initial import

--- a/.gitattributes
+++ b/.gitattributes
@@ -4417,6 +4417,23 @@ Workshops/OpenSeesDays/RCFrameUniform.tcl -text
 Workshops/OpenSeesDays/RCsection.tcl -text
 Workshops/OpenSeesDays/RCsection2D.tcl -text
 Workshops/OpenSeesDays/ReadRecord.tcl -text
+Workshops/OpenSeesDays/Steel2dModels/CBF1.tcl -text
+Workshops/OpenSeesDays/Steel2dModels/CBF2.tcl -text
+Workshops/OpenSeesDays/Steel2dModels/CBF3.tcl -text
+Workshops/OpenSeesDays/Steel2dModels/CBF4.tcl -text
+Workshops/OpenSeesDays/Steel2dModels/CBFbase.tcl -text
+Workshops/OpenSeesDays/Steel2dModels/Dynamic.EQ.tcl -text
+Workshops/OpenSeesDays/Steel2dModels/MRF1.tcl -text
+Workshops/OpenSeesDays/Steel2dModels/MRF2.tcl -text
+Workshops/OpenSeesDays/Steel2dModels/MRF2alternate.tcl -text
+Workshops/OpenSeesDays/Steel2dModels/MRF3.tcl -text
+Workshops/OpenSeesDays/Steel2dModels/MRF4.tcl -text
+Workshops/OpenSeesDays/Steel2dModels/MRF5.tcl -text
+Workshops/OpenSeesDays/Steel2dModels/MRF6.tcl -text
+Workshops/OpenSeesDays/Steel2dModels/Oak_2_50_5_FN.AT2 -text
+Workshops/OpenSeesDays/Steel2dModels/ReadRecord.tcl -text
+Workshops/OpenSeesDays/Steel2dModels/Steel2d.tcl -text
+Workshops/OpenSeesDays/Steel2dModels/el_centro.AT2 -text
 Workshops/OpenSeesDays/SteelWSections.tcl -text
 Workshops/OpenSeesDays/a.tcl -text
 Workshops/OpenSeesDays/b.tcl -text
