Modifications by Pedro Arduino Added PileToe3D.h and PileToe3D.cpp to UWElements Modify OpenSees.sln and /UWElements/Makefile to include PileToe3D Modify classTags.h and TclElementCommands.cpp to include PileToe3D

--- a/.gitattributes
+++ b/.gitattributes
@@ -2313,6 +2313,8 @@ SRC/element/UWelements/BeamEndContact3Dp.h -text
 SRC/element/UWelements/Brick8FiberOverlay.cpp -text
 SRC/element/UWelements/Brick8FiberOverlay.h -text
 SRC/element/UWelements/Makefile -text
+SRC/element/UWelements/PileToe3D.cpp -text
+SRC/element/UWelements/PileToe3D.h -text
 SRC/element/UWelements/Quad4FiberOverlay.cpp -text
 SRC/element/UWelements/Quad4FiberOverlay.h -text
 SRC/element/UWelements/SSPbrick.cpp -text
