--- a/.gitattributes
+++ b/.gitattributes
@@ -4449,6 +4449,7 @@ Workshops/OpenSeesDays/Steel2dModels/MRF3.tcl -text
 Workshops/OpenSeesDays/Steel2dModels/MRF4.tcl -text
 Workshops/OpenSeesDays/Steel2dModels/MRF5.tcl -text
 Workshops/OpenSeesDays/Steel2dModels/MRF6.tcl -text
+Workshops/OpenSeesDays/Steel2dModels/MRF7.tcl -text
 Workshops/OpenSeesDays/Steel2dModels/Oak_2_50_5_FN.AT2 -text
 Workshops/OpenSeesDays/Steel2dModels/ReadRecord.tcl -text
 Workshops/OpenSeesDays/Steel2dModels/Steel2d.tcl -text
