--- a/.gitattributes
+++ b/.gitattributes
@@ -3302,6 +3302,8 @@ SRC/material/uniaxial/Steel03.cpp -text
 SRC/material/uniaxial/Steel03.h -text
 SRC/material/uniaxial/Steel2.cpp -text
 SRC/material/uniaxial/Steel2.h -text
+SRC/material/uniaxial/Steel4.cpp -text
+SRC/material/uniaxial/Steel4.h -text
 SRC/material/uniaxial/SteelBRB.cpp -text
 SRC/material/uniaxial/SteelBRB.h -text
 SRC/material/uniaxial/SteelMP.cpp -text
