Quan Gu, Yichao Gao and Zhijian Qiu - initial import

--- a/.gitattributes
+++ b/.gitattributes
@@ -2338,6 +2338,18 @@ SRC/element/UWelements/SimpleContact3D.cpp -text
 SRC/element/UWelements/SimpleContact3D.h -text
 SRC/element/WrapperElement.cpp -text
 SRC/element/WrapperElement.h -text
+SRC/element/XMUelements/AC3D8HexWithSensitivity.cpp -text
+SRC/element/XMUelements/AC3D8HexWithSensitivity.h -text
+SRC/element/XMUelements/ASI3D8QuadWithSensitivity.cpp -text
+SRC/element/XMUelements/ASI3D8QuadWithSensitivity.h -text
+SRC/element/XMUelements/AV3D4QuadWithSensitivity.cpp -text
+SRC/element/XMUelements/AV3D4QuadWithSensitivity.h -text
+SRC/element/XMUelements/Makefile -text
+SRC/element/XMUelements/TclAcousticCommand.cpp -text
+SRC/element/XMUelements/TclElementCommands.cpp -text
+SRC/element/XMUelements/TclQuadCommand.cpp -text
+SRC/element/XMUelements/VS3D4QuadWithSensitivity.cpp -text
+SRC/element/XMUelements/VS3D4QuadWithSensitivity.h -text
 SRC/element/adapter/Actuator.cpp -text
 SRC/element/adapter/Actuator.h -text
 SRC/element/adapter/ActuatorCorot.cpp -text
