--- a/.gitattributes
+++ b/.gitattributes
@@ -2958,6 +2958,8 @@ SRC/material/nD/feap/matl01.f -text
 SRC/material/nD/feap/matl02.f -text
 SRC/material/nD/feap/matl03.f -text
 SRC/material/nD/feap/tdata.h -text
+SRC/material/nD/matCMM/MaterialCMM.cpp -text
+SRC/material/nD/matCMM/MaterialCMM.h -text
 SRC/material/nD/reinforcedConcretePlaneStress/ConcreteL01.cpp -text
 SRC/material/nD/reinforcedConcretePlaneStress/ConcreteL01.h -text
 SRC/material/nD/reinforcedConcretePlaneStress/ConcreteZ01.cpp -text
