--- a/.gitattributes
+++ b/.gitattributes
@@ -2324,6 +2324,8 @@ SRC/element/UWelements/PileToe3D.cpp -text
 SRC/element/UWelements/PileToe3D.h -text
 SRC/element/UWelements/Quad4FiberOverlay.cpp -text
 SRC/element/UWelements/Quad4FiberOverlay.h -text
+SRC/element/UWelements/QuadBeamEmbedContact.cpp -text
+SRC/element/UWelements/QuadBeamEmbedContact.h -text
 SRC/element/UWelements/SSPbrick.cpp -text
 SRC/element/UWelements/SSPbrick.h -text
 SRC/element/UWelements/SSPbrickUP.cpp -text
