--- a/.gitattributes
+++ b/.gitattributes
@@ -2602,6 +2602,11 @@ SRC/element/mvelm/MVLEM.h -text
 SRC/element/mvelm/Makefile -text
 SRC/element/mvelm/SFI_MVLEM.cpp -text
 SRC/element/mvelm/SFI_MVLEM.h -text
+SRC/element/mvlem/MVLEM.cpp -text
+SRC/element/mvlem/MVLEM.h -text
+SRC/element/mvlem/Makefile -text
+SRC/element/mvlem/SFI_MVLEM.cpp -text
+SRC/element/mvlem/SFI_MVLEM.h -text
 SRC/element/nonlinearBeamColumn/Makefile -text
 SRC/element/nonlinearBeamColumn/matrixutil/Makefile -text
 SRC/element/nonlinearBeamColumn/matrixutil/MatrixUtil.cpp -text
