fmk - initial import

--- a/.gitattributes
+++ b/.gitattributes
@@ -2397,6 +2397,21 @@ SRC/element/brick/Twenty_Node_Brick.cpp -text
 SRC/element/brick/Twenty_Node_Brick.h -text
 SRC/element/brick/shp3d.cpp -text
 SRC/element/brick/shp3d.h -text
+SRC/element/componentElement/ARL360.at2 -text
+SRC/element/componentElement/ARL360.g3 -text
+SRC/element/componentElement/ComponentElement2d.CHOPRA2 -text
+SRC/element/componentElement/ComponentElement2d.cpp -text
+SRC/element/componentElement/ComponentElement2d.h -text
+SRC/element/componentElement/Example3.1.tcl -text
+SRC/element/componentElement/Makefile -text
+SRC/element/componentElement/ReadSMDFile.tcl -text
+SRC/element/componentElement/a.tcl -text
+SRC/element/componentElement/analyze -text
+SRC/element/componentElement/b.tcl -text
+SRC/element/componentElement/mine.m -text
+SRC/element/componentElement/test.m -text
+SRC/element/componentElement/test.tcl -text
+SRC/element/componentElement/test2.tcl -text
 SRC/element/dispBeamColumn/DispBeamColumn2d.cpp -text
 SRC/element/dispBeamColumn/DispBeamColumn2d.h -text
 SRC/element/dispBeamColumn/DispBeamColumn2dThermal.cpp -text
